refactor(room): move timezone to `PublicUserProfile` and make it required
